--- a/src/index.html
+++ b/src/index.html
@@ -53,5 +53,35 @@
 			</div>
 		</div>
 	</div>
+
+	<div class="adventages">
+		<div class="container">
+			<h1 class="title">НАШИ ПРЕИМУЩЕСТВА</h1>
+			<div class="adventages__wrapper">
+				<div class="adventages__item">
+					<img src="icons/advantages/cup.png" alt="cup" class="adventages__icon">
+					<div class="adventages__subtitle">Делимся опытом</div>
+					<div class="adventages__descr">
+						Наши сотрудники всегда готовы поделиться своим опытом,так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
+					</div>
+				</div>
+				<div class="adventages__item">
+					<img src="icons/advantages/heart.png" alt="heart" class="adventages__icon">
+					<div class="adventages__subtitle">Заботимся о здоровье</div>
+					<div class="adventages__descr">
+						Мы работаем для того, 
+						чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
+					</div>
+				</div>
+				<div class="adventages__item">
+					<img src="icons/advantages/shoe.png" alt="shoe" class="adventages__icon">
+					<div class="adventages__subtitle">Учим бегать</div>
+					<div class="adventages__descr">
+							Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
